syntax = "proto3";

option java_multiple_files = true;
option java_package = "";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetMemberInfo (MemberInfoRequest) returns (MemberInfoReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message MemberInfoRequest {
  int64 id = 1;
}

message MemberInfoReply {
  int64 id = 1;
  string email = 2;
  string identification = 3;
  string phoneNumber = 4;
}
